linphone-3.7...??
	* multiple SIP transports simualtaneously now allowed
	* IP dual stack: can use IPv6 and IPv4 simultaneously
	* fully asynchronous behavior: no more lengthly DNS or connections 

linphone-3.6.1 -- June 17, 2013
	* fix memory leak with some video cameras on windows.
	
	Requires: mediastreamer2 = 2.9.1 and ortp = 0.22.0

linphone-3.6.0 -- May 27, 2013
	UI:
	* new friend list and chat messaging UI
	* enhanced call history
	* call and conference audio recording
	* persistent chat history
	* DSCP settings for SIP and RTP
	* display of call statistics (when clicking on the quality indicator bar)
	core:
	* ICE for efficient RTP exchange
	* fix bug in zRTP support (upgrade required)
	* call recording
	* uPnP
	* call statistics
	* adaptive bitrate control improvements
	* faster call quality indicator feedback
	* DSCP settings for SIP and RTP
	* detailed call statistics feedback API

	Requires: mediastreamer2 = 2.9.0 and ortp = 0.22.0


linphone-3.5.2 -- February 22, 2012
	* updated oRTP to 0.20.0
	* updated mediastreamer2 to 2.8.2
	* added ZRTP media encryption
	* added SILK audio codec

linphone-3.5.1 -- February 17, 2012
	* gtk - implement friend search by typing into the friendlist, and friend sorting

linphone-3.5.0 -- December 22, 2011
	* added VP-8 video codec
	* added G722 audio codec
	* added SIP/TCP and SIP/TLS
	* added SRTP media encryption
	* Audio conferencing
	* UI: call history tab, menu simplified
	* UI: cosmetics for incall views
	* UI: integration with libnotify
	* UI: show registered SIP accounts
	* Fixes for MacOS X, and uses GtkQuartz engine

linphone-3.4.3 -- March 28, 2011
	* Fully ported to mac os x with gtk-osx (menu integration, bundle generation with "make bundle", sound I/O improved) but still audio only
	* Fix stupid warning "no response" that sometimes arrived at end of calls
	* limit the size of the log window (to prevent memory drain)