@@ -181,6 +181,10 @@ static void process_request_event(void *sal, const belle_sip_request_event_t *ev
 
 	if (dialog) {
 		op=(SalOp*)belle_sip_dialog_get_application_data(dialog);
+		if (op==NULL && op->state==SalOpStateTerminated){
+			ms_warning("Receiving request for null or terminated op [%p], ignored",op);
+			return;
+		}
 	}else if (strcmp("INVITE",method)==0) {
 		op=sal_op_new((Sal*)sal);
 		op->dir=SalOpDirIncoming;
