@@ -1,1 +1,1 @@
-37.59.129.74	sip.example.org sipopen.example.org auth.example.org auth1.example.org auth2.example.org
+94.23.19.176	sip.example.org sipopen.example.org auth.example.org auth1.example.org auth2.example.org
